tests/fixtures/valid/multi/explicit_index/main.gcl
// Explicitly import the Color index.
import lib.{ Color };

param favorite: Dimensionless[Color] = {
    Color.Red: 1.0,
    Color.Green: 2.0,
    Color.Blue: 3.0,
};
